<resources>
    <string name="app_name">SeminarConstraint</string>
    <string name="button_group">Group</string>
    <string name="button_place_holder">Placeholder</string>
    <string name="button_animation">Animation</string>
    <string name="button_relative_position">Relative Position</string>
    <string name="button_chain">Chain</string>
    <string name="button_guideline">Guideline</string>
    <string name="button_constraint_ratio">Constraint Ratio</string>
    <string name="button_barrier">Barrier</string>
    <string name="space_stations">Space Stations</string>
    <string name="rovers">Rovers</string>
    <string name="flights">Flights</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="dca">DCA</string>
    <string name="mars">MARS</string>
    <string name="traveller">1 Traveller</string>
    <string name="depart">Depart</string>
    <string name="message_time">March 2017 PG 129 minutes</string>
    <string name="message_buy">BUY FROM R127,99</string>
    <string name="message_rent">RENT FROM R29,99</string>
    <string name="message_name">Beauty and the Beast</string>
    <string name="message_desc">The story and characters you know and love come to spectacular life in the live-action adaption of Disney\'s animated classic Beauty and the Beast.</string>
    <string name="packed">Packed</string>
    <string name="spread">Spread</string>
    <string name="spread_inside">Spread Inside</string>

    <string name="rent">Rent from R29.99</string>
    <string name="buy">Buy from R129.99</string>
    <string name="template_movie_details">March 2017 PG 129 minutes</string>
    <string name="template_movie_title">Beauty and the Beast</string>
    <string name="template_movie_genre">Family</string>
    <string name="template_rotten_tomato_rating">71%</string>
    <string name="template_similar">Similar</string>
    <string name="template_movie_description">The story and characters you know and love come to spectacular life in the live-action adaption of Disney\'s animated classic Beauty and the Beast.</string>
    <string name="template_number_ratings">242 ratings</string>
    <string name="content_description_add_playlist">Add to watchlist</string>
    <string name="content_description_poster">Movie Poster Image</string>
    <string name="content_description_hero_image">Hero Image</string>
    <string name="email">EMAIL</string>
    <string name="call">CALL</string>
    <string name="navigate">NAVIGATE</string>
    <string name="option_circular_demo">Circular Demo</string>
    <string name="saturation">Saturation</string>
    <string name="contrast">Contrast</string>
    <string name="warmth">Warmth</string>
    <string name="button_start">Start</string>
    <string name="button_end">End</string>
</resources>
