<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_group"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_placeholder"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_barrier"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_place_holder"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_animation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_group"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_animation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_animation"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_placeholder"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_relative_position"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_relative_position"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_chain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_chain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_chain"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_relative_position"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_guideline"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_constraint_ratio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_chain"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_constraint_ratio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_constraint_ratio"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_barrier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_guide_line"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_barrier"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/btn_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_constraint_ratio"/>

</androidx.constraintlayout.widget.ConstraintLayout>