<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image_header"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView12"
        android:layout_width="@dimen/dp_100"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_header"
        app:layout_constraintDimensionRatio="h,1:1.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/image_header"
        app:srcCompat="@drawable/poster"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView15"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/message_name"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintEnd_toStartOf="@+id/imageView13"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/image_header"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView13"
        android:layout_width="@dimen/dp_48"
        android:layout_height="@dimen/dp_48"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:padding="@dimen/dp_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_header"
        app:srcCompat="@drawable/ic_bookmark"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:text="@string/message_time"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline6"
        app:layout_constraintStart_toEndOf="@+id/imageView12"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@android:color/holo_red_light"
        android:text="@string/rent"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline6"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@android:color/holo_red_light"
        android:text="@string/message_buy"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toTopOf="@+id/guideline6"/>

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"/>

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_16"
        android:background="@color/caption_text_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/view"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView14"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toStartOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/space_station_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView15"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toStartOf="@+id/imageView16"
        app:layout_constraintStart_toEndOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/rocket_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView16"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toStartOf="@+id/imageView17"
        app:layout_constraintStart_toEndOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/rover_icon"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageView17"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_32"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/galaxy"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/rovers"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/round_trip"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/rovers"
        app:layout_constraintEnd_toEndOf="@+id/imageView16"
        app:layout_constraintStart_toStartOf="@+id/imageView16"
        app:layout_constraintTop_toBottomOf="@+id/imageView16"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/space_stations"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/imageView17"/>

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:layout_marginTop="@dimen/dp_8"
        android:background="@color/caption_text_color"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView18"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView24"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_6"
        android:layout_marginStart="@dimen/dp_6"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        tools:text="@string/message_desc"/>
</androidx.constraintlayout.widget.ConstraintLayout>